# sys-copilot

./: CMakeLists.txt  GEMINI.md  LICENSE  README.md  resources.qrc
src/common/: systemdata.h
src/copilot/: CMakeLists.txt  copilot.cpp  copilot.h
src/core/: systemmonitor.cpp  systemmonitor.h
src/ui/: mainwindow.cpp  mainwindow.h
